<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.exonym</groupId>
        <artifactId>rulebook-node-parent</artifactId>
        <version>1.0.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>


  <groupId>io.exonym</groupId>
  <artifactId>io.exonym.utils</artifactId>
  <version>0.2</version>
  <packaging>jar</packaging>
  <name>io.exonym.utils</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <abc4TrustVersion>1.1.36</abc4TrustVersion>
    <skipTests>true</skipTests>
  
  </properties>

  <dependencies>

  <dependency>
      <groupId>io.exonym</groupId>
      <artifactId>io.exonym.lite</artifactId>
      <version>0.2</version>
  </dependency>

    <dependency>
      <groupId>com.ibm.zurich.idmx</groupId>
      <artifactId>com.ibm.zurich.idmx.interfaces</artifactId>
      <version>3.1.0</version>
    </dependency>

    <dependency>
      <groupId>com.ibm.zurich.idmx</groupId>
      <artifactId>com.ibm.zurich.idmx.3_x_x</artifactId>
      <version>3.1.0</version>
    </dependency>

    <dependency>
      <groupId>eu.abc4trust.ri</groupId>
      <artifactId>abc4trust-xml</artifactId>
      <version>${abc4TrustVersion}</version>
    </dependency>

    <dependency>
      <groupId>eu.abc4trust.ri</groupId>
      <artifactId>abce-interfaces</artifactId>
      <version>${abc4TrustVersion}</version>
    </dependency>

      <!-- Referenced libraries -->
      <dependency>
          <groupId>com.google.inject</groupId>
          <artifactId>guice</artifactId>
          <version>3.0</version>
      </dependency>
      <dependency>
          <groupId>javax.xml.bind</groupId>
          <artifactId>jaxb-api</artifactId>
          <version>2.3.1</version>
          <exclusions>
              <exclusion>
                  <groupId>javax.activation</groupId>
                  <artifactId>activation</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>com.sun.xml.security</groupId>
          <artifactId>xml-security-impl</artifactId>
          <version>1.0</version>
      </dependency>

      <!-- We need this dependency for the namespace prefix mapper -->
      <dependency>
          <groupId>com.sun.xml.ws</groupId>
          <artifactId>webservices-rt</artifactId>
          <version>2.0.1</version>
      </dependency>

	<dependency>
	    <groupId>com.jcraft</groupId>
	    <artifactId>jsch</artifactId>
	    <version>0.1.55</version>
	</dependency>
	
	<dependency>
	    <groupId>net.samuelcampos</groupId>
	    <artifactId>usbdrivedetector</artifactId>
	    <version>2.0.4</version>
	</dependency>

	<dependency>
	    <groupId>net.sf.corn</groupId>
	    <artifactId>corn-cps</artifactId>
	    <version>1.0.1</version>
	</dependency>

    <dependency>
        <groupId>javax.mail</groupId>
        <artifactId>javax.mail-api</artifactId>
        <version>1.5.1</version>
    </dependency>

    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.14</version>
    </dependency>

  </dependencies>
  
  <build>
   	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
<!--            <version>3.10.1</version>-->
			<version>2.3.2</version>
			<configuration>
				<source>11</source>
				<target>11</target>
			</configuration>
		</plugin>
	</plugins>
	
    <resources>
        <resource>
            <directory>resource/</directory>
        </resource>
    </resources>
	   
    </build>
  
</project>
